--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "json:server": "json-server --watch db.json"
   },
   "dependencies": {
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "json-server": "^0.12.1",
     "lodash": "^4.17.5",
     "nodemon": "^1.17.2"
   }
